# Clawarm

./: .cursorrules  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
bridge/: __init__.py  arm_manager.py  models.py  safety.py  server.py
bridge/drivers/: agx_driver.py  base.py  mock_driver.py
config/: openclaw.example.json
docs/: architecture.md  quickstart.md  safety.md
examples/: draw_circle.py  hello_arm.py  pick_and_place.py
plugin/: index.ts  openclaw.plugin.json  package.json
plugin/src/: bridge-client.ts
plugin/src/tools/: arm-connect.ts  arm-move.ts  arm-status.ts  arm-stop.ts
setup/: activate_can.sh  check_env.py  install.sh
skills/agx-arm-codegen/: SKILL.md
skills/agx-arm-codegen/references/: pyagxarm-api.md
tests/: test_bridge_api.py  test_mock_driver.py  test_safety.py
workspace/: AGENTS.md  SOUL.md
